# pythics

./: .gitignore  LICENSE  README.md  colliders.py  object.py  physics.py  pythics.py  setup.cfg  vector.py
Objects/: colliders.py
pythics/: colliders.py  object.py  physics.py  vector.py
utils/: colliders.py  errors.py  funcs.py  gameobject.py  rigidbody.py  vector.py
