[metadata]
name = pythics
version = 0.0.1
author = Kody Schram
author_email = kody.schram@icloud.com
description = Basic 2D physics library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DarkKnight8034/pythics
license = "MIT"

[options]
packages = find:
python_requires = >=3.7